# geosar

./: .gitignore  README.md  pyproject.toml
src/geosar/: __init__.py  main.py  settings.py
tests/: test_gpx.py  test_vis.py
tests/data/: VA.gpx
