[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "geosar"
author = "Brian Cohan"
author-email = "briancohan@gmail.com"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

requires=[
    'dash >= 1.19.0',
    'gpxpy >= 1.4.2',
    'lxml >= 4.6.2',
    'pandas >= 1.2.3',
    'plotly >= 4.14.3',
    'pyephem >= 9.99',
    'python-dotenv >=0.15.0',
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.2.2",
    "pytest-cov >=2.11.1",
    "pytest-datadir >= 1.3.1",
]
dev = [
    "jupyterlab >=3.0.10",
]
